--- a/examples/Web Apps/Framework Examples/Blazor/SystemLinkAuthExample/Layout/NavBar.razor.css
+++ b/examples/Web Apps/Framework Examples/Blazor/SystemLinkAuthExample/Layout/NavBar.razor.css
@@ -26,7 +26,7 @@
 }
 
 .header a:hover {
-    background-color: white;
+    background-color: var(--ni-nimble-application-background-color);
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.12);
     border-color: var(--ni-nimble-border-hover-color);
 }
